@@ -719,14 +719,21 @@ been given.  Slaves eventually lose loyalty as well.  If they starve, or if \
 they take damage for any reason, their loyalty will decrease, making them \
 more and more likely to leave their masters homes, or attack their masters.
 
+STRUGGLEBONDS=THIEF_STRUGGLEBONDS
+THIEF_STRUGGLEBONDS=<ABILITY>\
+Usage    : STRUGGLEBONDS\n\r\
+Example  : strugglebonds\n\r\
+The player wriggles and pulls to escape from bonds holding him or her. \
+This skill can be used to more quickly become released from ropes, \
+webs, nets, and other bindings.
+
 ESCAPE=ESCAPE_BONDS
 ESCAPEBONDS=ESCAPE_BONDS
 ESCAPE_BONDS=<ABILITY>\
 Usage    : ESCAPEBONDS\n\r\
 Example  : escapebonds\n\r\
-The player wriggles and pulls to escape from bonds holding him or her. \
-This skill can be used to more quickly become released from ropes, \
-webs, nets, and other bindings.
+The player uses his or her special skills to be released from ropes, \
+webs, nets, and other bindings. 
 
 FALSEARREST=FALSE_ARREST
 FALSE_ARREST=<ABILITY>\
@@ -899,7 +906,7 @@ effective than primary attacks.
 
 HANDCUFF=SKILL_HANDCUFF
 CUFF=SKILL_HANDCUFF
-SKILL_HANDCUFF=\
+SKILL_HANDCUFF=<ABILITY>\
 Usage    : HANDCUFF [TARGET NAME] \n\r\
 Example  : cuff orc\n\r\
 Allows the player to bind another mob that is sitting or lying down, and force them \
