@@ -2425,4 +2425,6 @@ ruthless programmer, and sentenced to a quick death.
 29.New formulas for PVP combat -- INI/Control Panel support.  The defaults basically remove level fudging.
 30.(Internal) New experiments in Fully Async sessions continues apace.  Converted Logout and Quit.
 31.New prayer: Retribution (neutral Blade Barriar for Missionaries & Shaman)
-32.POUR command can now be used to activate a potion on an item (for example, enchant weapon potion)
+32.POUR command can now be used to activate a potion on an item (for example, enchant weapon potion) (like powders and throwing)
+33.About two dozen thief skills have been finished and assigned to various classes. Skill_EscapeBonds renamed to Struggle Bonds.
+34.Potions and Pills are more scaled to their levels.
